--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -16,7 +16,8 @@
 				<td><%= category.thumburl %></td>
 				<td><%= link_to 'Show', category_path(category) %></td>
 				<td><%= link_to 'Edit', edit_category_path(category) %></td>
-				<td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+				<td><%= link_to 'Destroy', category, method: :delete, data: 
+																{ confirm: 'Are you sure?' } %></td>
 			</tr>
 		<% end %>
 	</tbody>
