--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,2 +1,5 @@
 <h1>New Category</h1>
-<p>Find me in app/views/categories/new.html.erb</p>
+<!-- <p>Find me in app/views/categories/new.html.erb</p> -->
+<%= render 'form' %>
+
+<%= link_to 'Back', categories_path%>
