Finish Authentication, check for bugs, and update README

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/topnav' %>
+
 <h1>New Category</h1>
 <!-- <p>Find me in app/views/categories/new.html.erb</p> -->
 <%= render 'form' %>
