--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/topnav' %>
+
 <h1>New Product</h1>
 <!-- <p>Find me in app/views/products/new.html.erb</p> -->
 <%= render 'form' %>
